# tracky

./: .gitignore  CHANGELOG.md  CONTEXT.md  Cargo.toml  LICENSE  README.md  THIRD-PARTY-NOTICES  about.toml  deny.toml  tickets.md
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  dashboard-baseline.yml  dashboard-release-accessibility.yml  dashboard-release-browsers.yml  dashboard-release-candidate.yml  dashboard-release-proof.yml  release.yml  restrict-pull-requests.yml
docs/: dashboard-evidence.md  dashboard.md
docs/adr/: 0001-review-first-import.md  0002-sqlite-canonical-store.md  0003-exact-investment-quantities-and-cost.md
docs/agents/: domain.md  issue-tracker.md  pdf-import-workflow.md  triage-labels.md
docs/contracts/: brokerage-lifecycle-json.md  consolidated-investment-report-json.md  investment-provider-documents-json.md  investment-reconciliation-json.md  operational-safety-json.md  review-first-pdf-import-json.md
docs/issues/: 0001-define-review-first-import-contract.md  0002-extract-pdf-inspection-core.md  0003-add-pdf-inspect-cli-json.md  0004-create-sqlite-review-first-schema.md  0005-add-import-pdf-persistence.md  0006-flag-possible-duplicate-candidates.md  0007-add-candidate-review-cli.md  0011-add-owned-account-registry.md  (+45 more)
examples/: pdf_extraction_spike.rs
migrations/: 0001_review_first_schema.sql
scripts/: dashboard_accessibility_evidence.py  dashboard_browser_evidence.py  dashboard_candidate_manifest.py  dashboard_candidate_runtime.py  dashboard_evidence.py  dashboard_release_browser.py
src/: brokerage.rs  cdt.rs  cdt_provider_enrichment.rs  cli.rs  dashboard.rs  dashboard_finance.rs  dashboard_view.rs  investment_document_parsers.rs  investment_document_review.rs  investment_documents.rs  investment_integrity.rs  investment_reports.rs  investments.rs  lib.rs  main.rs  operations.rs  pdf.rs  reconciliation.rs  storage.rs
tests/: account_registry_cli.rs  batch_review_cli.rs  brokerage_lifecycle_cli.rs  candidate_review_cli.rs  cdt_lifecycle_cli.rs  cdt_provider_enrichment_cli.rs  dashboard_accessibility_evidence.py  dashboard_browser_evidence.py  dashboard_browser_flow.py  dashboard_candidate_manifest.py  dashboard_candidate_runtime.py  dashboard_cli.rs  dashboard_evidence.rs  dashboard_evidence_tool.py  finance_report_cli.rs  import_pdf_persistence.rs  investment_positions_cli.rs  investment_provider_documents_cli.rs  investment_reconciliation_cli.rs  investment_report_cli.rs  manual_transactions_cli.rs  operations_cli.rs  pdf_inspect_cli.rs  storage_migrations.rs  transaction_ledger_cli.rs
(+48 files in other folders)
