[package]
name = "tracky"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "tracky"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
pdf_oxide = "0.3.71"
pdfium-auto = "0.3.0"
pdfium-render = "0.8"
regex = "1.11"
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[[bin]]
name = "pdf-extraction-spike"
path = "src/bin/pdf_extraction_spike.rs"
