[package]
name = "tracky"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "tracky"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
dotenvy = "0.15"
pdf_oxide = "0.3.71"
pdfium-auto = "0.3.0"
pdfium-render = "0.8"
regex = "1.11"
rpassword = "7.3"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[[bin]]
name = "pdf-extraction-spike"
path = "src/bin/pdf_extraction_spike.rs"

[dev-dependencies]
lopdf = "0.44.0"
tempfile = "3.27.0"
