[package]
name = "tracky"
version = "0.2.2"
edition = "2021"
publish = false
default-run = "tracky"
description = "Local-first, review-first personal finance CLI"
homepage = "https://github.com/yersonargotev/tracky"
repository = "https://github.com/yersonargotev/tracky"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
dotenvy = "0.15"
pdf_oxide = "0.3.71"
pdfium-auto = "0.3.0"
pdfium-render = "0.8"
regex = "1.11"
rpassword = "7.3"
rusqlite = { version = "0.32.1", features = ["backup", "bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio"] }
tokio = { version = "1", features = ["rt", "net", "signal", "sync", "time"] }
webbrowser = { version = "1", default-features = false, features = ["hardened"] }
rand = "0.10"
tempfile = "3.27.0"

[dev-dependencies]
lopdf = "0.44.0"

[package.metadata.dist]
dist = true
auto-includes = false
include = ["README.md", "LICENSE", "THIRD-PARTY-NOTICES"]

[workspace.metadata.dist]
cargo-dist-version = "0.32.0"
allow-dirty = ["ci"]
ci = ["github"]
installers = ["shell", "homebrew"]
targets = [
    "aarch64-apple-darwin",
    "x86_64-unknown-linux-gnu",
]
tap = "yersonargotev/homebrew-tap"
publish-jobs = ["homebrew"]
checksum = "sha256"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
